move ros2 notes into a folder

--- a/src/content/docs/en/ros2/index.mdx
+++ b/src/content/docs/en/ros2/index.mdx
@@ -19,17 +19,17 @@ Software requirements:
 ## Module 1 - Basics
 
 Content Outline:
-- [ROS 2 Introduction](ros2-intro)
-- [Workspace](ros2-ws): Create and manage a ROS workspaces
-- [Packages](ros2-pkgs): Structure and management
-- [Nodes](ros2-nodes)
-- [Interfaces](ros2-interfaces)
-- [Topics](ros2-topics)
-- [Services](ros2-services)
-- TBA [Quality of Service (QoS)](ros2-qos)
-- TBA [Actions](ros2-actions)
-- [Arguments, ROS arguments and parameters](ros2-parameters)
-- [Launch System](ros2-launch)
+- [ROS 2 Introduction](ros2/intro)
+- [Workspace](ros2/ws): Create and manage a ROS workspaces
+- [Packages](ros2/pkgs): Structure and management
+- [Nodes](ros2/nodes)
+- [Interfaces](ros2/interfaces)
+- [Topics](ros2/topics)
+- [Services](ros2/services)
+- TBA [Quality of Service (QoS)](ros2/qos)
+- TBA [Actions](ros2/actions)
+- [Arguments, ROS arguments and parameters](ros2/parameters)
+- [Launch System](ros2/launch)
 
 
 ## Module 2 - Intermediate
@@ -37,16 +37,16 @@ Content Outline:
 Intermediate - Tooling
 - Introduction to RVIZ
 - TF tree and Transformations with TF2
-- [Robot model description formats](ros2-description)
-- [Introduction to Gazebo](ros2-gazebo)
+- [Robot model description formats](ros2/description)
+- [Introduction to Gazebo](ros2/gazebo)
 - Building sim environment in Gazebo
 - Gazebo plugins ecosystem
 
 ## Module 3 - Advanced
 
 - Advanced subjects on nodes
-- [Security](ros2-security)
-- [Multi-agent](ros2-multi-agent)
+- [Security](ros2/security)
+- [Multi-agent](ros2/multi-agent)
 
 ## Extras
 
