--- a/src/content/docs/en/ros2/intro.mdx
+++ b/src/content/docs/en/ros2/intro.mdx
@@ -21,9 +21,9 @@ If you are wondering:
 ## Why do we need ROS nowadays?
 
 <Slide>
-<Think
-    note="Imagine that it is around the year 2007, and that are many research laboratories in the area of robotics, each one of them with its own robots and each robot with its own particularities. How can you share code between researchers without reinventing the wheel (minimize code rewrite)?"
-/>
+<Think>
+Imagine that it is around the year 2007, and that are many research laboratories in the area of robotics, each one of them with its own robots and each robot with its own particularities. How can you share code between researchers without reinventing the wheel (minimize code rewrite)?
+</Think>
 </Slide>
 
 If you think this is a trivial task to the point of "just share the code", I honestly wouldn't blame you for thinking that, but the reality is that is not a trivial task.
