--- a/src/content/docs/en/ros2/pkgs.mdx
+++ b/src/content/docs/en/ros2/pkgs.mdx
@@ -11,9 +11,9 @@ A ROS package is an organizational unit for your code, configuration files and a
 Source: [Own definition inspired by Creating a package - ROS docs](https://docs.ros.org/en/humble/Tutorials/Beginner-Client-Libraries/Creating-Your-First-ROS2-Package.html)
 </Definition>
 
-<Think
-note="Why do we need a so called 'ROS Package'?"
-/>
+<Think>
+Why do we need a so called 'ROS Package'?
+</Think>
 
 ROS Packages allow you to make your code shareable within other systems that also use ROS, so it is reasonable to think of a ROS package as an analogue to for example a *python package* (like [numpy](https://numpy.org/)).
 
