--- a/src/content/docs/en/linear-algebra/005.mdx
+++ b/src/content/docs/en/linear-algebra/005.mdx
@@ -2,8 +2,8 @@
 title: "Transposes, Permutations, Spaces R^n"
 ---
 
-import VectorSpace2D from "../../../components/LinearAlgebra/VectorSpace2D.astro"
-import SubSpaceL2D from "../../../components/LinearAlgebra/SubSpaceL2D.astro"
+import VectorSpace2D from "../../../../components/LinearAlgebra/VectorSpace2D.astro"
+import SubSpaceL2D from "../../../../components/LinearAlgebra/SubSpaceL2D.astro"
 
 Section 2.7 and 3.1 Introduction to Linear Algebra by Gilbert Strang.
 
