--- a/src/content/docs/en/references.bib
+++ b/src/content/docs/en/references.bib
@@ -1556,3 +1556,214 @@ DOI: 10.1007/11840541_68},
   isbn = {978-1-4419-1846-8 978-0-387-21779-6},
   langid = {english}
 }
+@article{stroustrupWhatObjectorientedProgramming1988,
+  title = {What Is Object-Oriented Programming?},
+  author = {Stroustrup, B.},
+  date = {1988-05},
+  journaltitle = {IEEE Software},
+  shortjournal = {IEEE Softw.},
+  volume = {5},
+  number = {3},
+  pages = {10--20},
+  issn = {0740-7459},
+  doi = {10.1109/52.2020},
+  url = {http://ieeexplore.ieee.org/document/2020/},
+  urldate = {2025-10-26}
+}
+@article{kayEarlyHistorySmalltalk1993,
+  title = {The Early History of {{Smalltalk}}},
+  author = {Kay, Alan C.},
+  date = {1993-03},
+  journaltitle = {ACM SIGPLAN Notices},
+  shortjournal = {SIGPLAN Not.},
+  volume = {28},
+  number = {3},
+  pages = {69--95},
+  issn = {0362-1340, 1558-1160},
+  doi = {10.1145/155360.155364},
+  url = {https://dl.acm.org/doi/10.1145/155360.155364},
+  urldate = {2025-10-26},
+  abstract = {Most ideas come from previous ideas. The sixties, particularly in the ARPA community, gave rise to a host of notions about “human-computer symbiosis” through interactive time-shared computers, graphics screens and pointing devices. Advanced computer languages were invented to simulate complex systems such as oil refineries and semi-intelligent behavior. The soon to follow paradigm shift of modern personal computing, overlapping window interfaces, and object-oriented design came from seeing the work of the sixties as something more than a “better old thing”. That is, more than a better way: to do mainframe computing; for end-users to invoke functionality; to make data structures more abstract. Instead the promise of exponential growth in computing/\$/volume demanded that the sixties be regarded as “               almost               a new thing” and to find out what the actual “new things” might be. For example, one would compute with a handheld “Dynabook” in a way that would not be possible on a shared mainframe; millions of potential users meant that the user interface would have to become a learning environment along the lines of Montessori and Bruner; and needs for large scope, reduction in complexity, and end-user literacy would require that data and control structures be done away with in favor of a more biological scheme of protected universal cells interacting only through messages that could mimic any desired behavior.                          Early Smalltalk was the first complete realization of these new points of view as parented by its many predecessors in hardware, language and user interface design. It became the exemplar of the new computing, in part, because we were actually trying for a qualitative shift in belief structures—a new Kuhnian paradigm in the same spirit as the invention of the printing press—and thus took highly extreme positions which almost forced these new styles to be invented.},
+  langid = {english}
+}
+@video{computerhistorymuseumOralHistoryBjarne2015,
+  entrysubtype = {video},
+  title = {Oral {{History}} of {{Bjarne Stroustrup}}},
+  editor = {{Computer History Museum}},
+  editortype = {director},
+  date = {2015-09-05},
+  url = {https://www.youtube.com/watch?v=ZO0PXYMVGSU},
+  urldate = {2025-10-26},
+  abstract = {Interviewed by Paul McJones, on February 5, 2015 in New York, New York, X7399.2015 © Computer History Museum}
+}
+@book{stroustrupDesignEvolution2007,
+  title = {The Design and Evolution of {{C}}++},
+  author = {Stroustrup, Bjarne},
+  date = {2007},
+  edition = {16. printing},
+  publisher = {Addison-Wesley},
+  location = {Reading, Mass.},
+  isbn = {978-0-201-54330-8},
+  langid = {english},
+  pagetotal = {461}
+}
+@unpublished{hoareRecordHandling1966,
+  title = {Record Handling},
+  author = {Hoare, C. A. R.},
+  date = {1966},
+  eventdate = {1966-09-12/1966-09-16},
+  eventtitle = {{{NATO}} Summer School},
+  howpublished = {Lecture notes},
+  langid = {english},
+  venue = {Villard-de-Lans, France}
+}
+@article{rossGeneralizedTechniqueSymbol1961,
+  title = {A Generalized Technique for Symbol Manipulation and Numerical Calculation},
+  author = {Ross, Douglas T.},
+  date = {1961-03},
+  journaltitle = {Communications of the ACM},
+  shortjournal = {Commun. ACM},
+  volume = {4},
+  number = {3},
+  pages = {147--150},
+  issn = {0001-0782, 1557-7317},
+  doi = {10.1145/366199.366256},
+  url = {https://dl.acm.org/doi/10.1145/366199.366256},
+  urldate = {2025-10-26},
+  langid = {english}
+}
+@book{descartesGeometrie1664,
+  title = {La  géométrie},
+  author = {Descartes, René},
+  date = {1664},
+  publisher = {chez Charles Angot},
+  doi = {10.3931/E-RARA-4764},
+  url = {https://www.e-rara.ch/zut/doi/10.3931/e-rara-4764},
+  urldate = {2025-10-28},
+  langid = {french}
+}
+@book{gallierGeometricMethodsApplications2011,
+  title = {Geometric {{Methods}} and {{Applications}}: {{For Computer Science}} and {{Engineering}}},
+  shorttitle = {Geometric {{Methods}} and {{Applications}}},
+  author = {Gallier, Jean},
+  date = {2011},
+  series = {Texts in {{Applied Mathematics}}},
+  volume = {38},
+  publisher = {Springer New York},
+  location = {New York, NY},
+  doi = {10.1007/978-1-4419-9961-0},
+  url = {https://link.springer.com/10.1007/978-1-4419-9961-0},
+  urldate = {2025-10-29},
+  isbn = {978-1-4419-9960-3 978-1-4419-9961-0},
+  langid = {english}
+}
+@book{axlerLinearAlgebraDone2015,
+  title = {Linear {{Algebra Done Right}}},
+  author = {Axler, Sheldon},
+  date = {2015},
+  series = {Undergraduate {{Texts}} in {{Mathematics}}},
+  publisher = {Springer International Publishing},
+  location = {Cham},
+  doi = {10.1007/978-3-319-11080-6},
+  url = {https://link.springer.com/10.1007/978-3-319-11080-6},
+  urldate = {2023-04-10},
+  isbn = {978-3-319-11079-0 978-3-319-11080-6},
+  langid = {english}
+}
+@book{grassmannAusdehnungslehre1844Oder1878,
+  title = {Die Ausdehnungslehre von 1844 oder die lineale Ausdehnungslehre},
+  author = {Graßmann, Hermann},
+  date = {1878},
+  edition = {2., im Text unveränderte Auflage},
+  pages = {XXXIV, 301},
+  publisher = {Wigand / Niedersächsische Staats- und Universitätsbibliothek Göttingen},
+  location = {Leipzig},
+  url = {http://resolver.sub.uni-goettingen.de/purl?PPN534901565},
+  classification = {QA259},
+  langid = {german},
+  size = {8°},
+  subjects = {Analysis, Geometrie, Ausdehnungslehre, Geschichte der Mathematik, Algebra}
+}
+@article{lawvereReviewHermannGunter2005,
+  title = {Review: {{Hermann Günter Grassmann}}, {{A}} New Branch of Mathematics},
+  author = {Lawvere, F. William},
+  date = {2005-02},
+  journaltitle = {Historia Mathematica},
+  shortjournal = {Historia Mathematica},
+  volume = {32},
+  number = {1},
+  pages = {99--106},
+  issn = {03150860},
+  doi = {10.1016/j.hm.2004.07.004},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/S031508600400059X},
+  urldate = {2025-11-04},
+  langid = {english}
+}
+@book{grassmannNewBranchMathematics1995,
+  title = {A New Branch of Mathematics: The "{{Ausdehnungslehre}}" of 1844 and Other Works},
+  shorttitle = {A New Branch of Mathematics},
+  author = {Graßmann, Hermann},
+  date = {1995},
+  edition = {1. print},
+  publisher = {Open Court},
+  location = {Chicago, Ill.},
+  isbn = {978-0-8126-9276-1 978-0-8126-9275-4},
+  langid = {english},
+  pagetotal = {555}
+}
+@book{kleinerHistoryAbstractAlgebra2007,
+  title = {A {{History}} of {{Abstract Algebra}}},
+  editor = {Kleiner, Israel},
+  date = {2007},
+  publisher = {Birkhäuser Boston},
+  location = {Boston, MA},
+  doi = {10.1007/978-0-8176-4685-1},
+  url = {http://link.springer.com/10.1007/978-0-8176-4685-1},
+  urldate = {2025-11-04},
+  isbn = {978-0-8176-4684-4},
+  langid = {english}
+}
+@book{swetzLearnMasters1995,
+  title = {Learn from the Masters!},
+  editor = {Swetz, Frank J.},
+  date = {1995},
+  series = {Classroom {{Resource Materials}}},
+  number = {v. 3},
+  publisher = {Mathematical Association of America},
+  location = {Washington, DC},
+  isbn = {978-0-88385-703-8 978-1-4704-5828-7},
+  langid = {english},
+  pagetotal = {1}
+}
+@article{alianeSurveyOpenSourceUAV2024,
+  title = {A {{Survey}} of {{Open-Source UAV Autopilots}}},
+  author = {Aliane, Nourdine},
+  date = {2024-12-04},
+  journaltitle = {Electronics},
+  shortjournal = {Electronics},
+  volume = {13},
+  number = {23},
+  pages = {4785},
+  issn = {2079-9292},
+  doi = {10.3390/electronics13234785},
+  url = {https://www.mdpi.com/2079-9292/13/23/4785},
+  urldate = {2025-11-10},
+  abstract = {This survey provides a comprehensive comparison of prominent open-source unmanned aerial vehicle (UAV) autopilots, focusing on their hardware compatibility, software features, and communication protocols. Additionally, it assesses the impact of these autopilots on research and education by examining their potential for integration with companion computers, compatibility with robot operating system (ROS) middleware and the MATLAB/Simulink environment, and the availability of simulation-in-the-loop (SITL) and hardware-in-the-loop (HITL) simulation tools. The paper concludes with a discussion of the advantages and disadvantages of these leading opensource autopilots.},
+  langid = {english}
+}
+@article{peksaReviewStateArt2024,
+  title = {A {{Review}} on the {{State}} of the {{Art}} in {{Copter Drones}} and {{Flight Control Systems}}},
+  author = {Peksa, Janis and Mamchur, Dmytro},
+  date = {2024-05-23},
+  journaltitle = {Sensors},
+  shortjournal = {Sensors},
+  volume = {24},
+  number = {11},
+  pages = {3349},
+  issn = {1424-8220},
+  doi = {10.3390/s24113349},
+  url = {https://www.mdpi.com/1424-8220/24/11/3349},
+  urldate = {2025-11-10},
+  abstract = {This paper presents an overview on the state of the art in copter drones and their components. It starts by providing an introduction to unmanned aerial vehicles in general, describing their main types, and then shifts its focus mostly to multirotor drones as the most attractive for individual and research use. This paper analyzes various multirotor drone types, their construction, typical areas of implementation, and technology used underneath their construction. Finally, it looks at current challenges and future directions in drone system development, emerging technologies, and future research topics in the area. This paper concludes by highlighting some key challenges that need to be addressed before widespread adoption of drone technologies in everyday life can occur. By summarizing an up-to-date survey on the state of the art in copter drone technology, this paper will provide valuable insights into where this field is heading in terms of progress and innovation.},
+  langid = {english}
+}
