--- a/src/content/docs/en/home.mdx
+++ b/src/content/docs/en/home.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Collection of Notes"
 description: My personal collection of notes related to robotics.
+toc: false
 ---
 
 **What is this website?**; Most, if not all, of my notes are a humble and well-intentioned attempt to bring formalism closer to intuition, rigorous (within my personal limitations) but approachable, covering concepts and topics primarily for my own edification, and although this may seem egocentric, I make them public with the hope that they can serve as a resource for anyone else.
 
 **Disclaimer**: Think about this website as *rummaging* through my (virtual) notebook; therefore, some notes may be chaotic --just ideas-- and others may be fully structured and polished.
 
+Ohh, I almost forgot to mention, there is no navigation system :)... it just make thing more interesting to explore on trying to find stuff.
+
 If you have the curiosity to know how this came to be, feel free to check [this](this).
-
-
-
