add list of influences

--- a/src/content/docs/en/this.mdx
+++ b/src/content/docs/en/this.mdx
@@ -52,6 +52,16 @@ Legibility: "Optimal legibility is achieved if the typographical factors, like s
 
 this is only effective if improves comprehension.
 
+## Influences
+
+The following is a list of people I came across over the years while working on this notes, people who inspired me and helped shape my sense of what high-quality content looks like:
+- [Bartosz Ciechanowski's](https://ciechanow.ski/)
+- The (digital for now Jan. 2026) book [Making Software](https://www.makingsoftware.com/) by [Dan Hollick](https://typefully.com/DanHollick).
+- [How does image compression work?](https://leerob.com/compression) by [Lee Robinson](https://leerob.com/)
+- [All color is best-effort](https://fasterthanli.me/articles/all-color-is-best-effort) by [Amos, better known as fasterthanlime](https://fasterthanli.me/about)
+- [254A, Notes 0: A review of probability theory](https://terrytao.wordpress.com/2015/09/29/275a-notes-0-foundations-of-probability-theory/) by [Terence Tao](https://www.math.ucla.edu/~tao/)
+- [Annotated History of Modern AI and Deep Learning](https://people.idsia.ch/~juergen/deep-learning-history.html) by [https://people.idsia.ch/~juergen/](Jürgen Schmidhuber)
+
 ## The Research (tech)
 
 Hunting for a stack.
